[package]
name = "manga-update"
version = "0.1.0"
edition = "2021"
authors = ["EldosHD"]

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
dirs = "5.0.0"
reqwest = "0.11.15"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
structopt = "0.3.26"
tokio = "1.26.0"
